--- a/untitled.tex
+++ b/untitled.tex
@@ -1,3 +1,3 @@
-\textit{Oh, an empty article!} 
-
-You can get started by \textbf{double clicking} this text block and begin editing. You can also click the \textbf{Insert} button below to add new block elements. Or you can \textbf{drag and drop an image} right onto this text. Happy writing!
+\title{Notes from the ESO-CMZ 2015 workshop}
+\section{Introduction}
+The workshop is intended to discuss ongoing and future work studying the central molecular zone of our galaxy, with a particular emphasis on the relationship between the molecular gas and star formation.
