--- a/untitled.tex
+++ b/untitled.tex
@@ -1,3 +1,5 @@
 \title{Notes from the ESO-CMZ 2015 workshop}
 \section{Introduction}
 The workshop is intended to discuss ongoing and future work studying the central molecular zone of our galaxy, with a particular emphasis on the relationship between the molecular gas and star formation.
+
+The conference web page is \url{http://eso.org/~aginsbur/ESO-CMZ-2015.html} and abstracts are listed at \url{http://eso.org/~aginsbur/abstracts.html}.  
