--- a/section_The_Dense_ISM_Discussions__.tex
+++ b/section_The_Dense_ISM_Discussions__.tex
@@ -6,3 +6,5 @@ What are the true gas densities and what is the density distribution?  Which clo
 What are the magnetic fields and temperatures of these clouds?
 
 What is the geometry of the molecular gas in the CMZ - is there really a ring?  Are the clouds on elliptical orbits?  Which orbits?
+
+Do cosmic rays, turbulence, x-rays, photons at other wavelengths, or other mechanisms heat the cloud interiors?  Exteriors?
