--- a/citep_Comparison_to_the_Galactic__.tex
+++ b/citep_Comparison_to_the_Galactic__.tex
@@ -1,2 +1,2 @@
-\citep{Comparison to the Galactic Disk}
+\section{Comparison to the Galactic Disk}
 How does star formation differ in our Galactic center from the rest of the Galaxy? 
