--- a/section_Comparison_to_the_Galactic__.tex
+++ b/section_Comparison_to_the_Galactic__.tex
@@ -1,2 +1,5 @@
 \section{Comparison to the Galactic Disk}
 How does star formation differ in our Galactic center from the rest of the Galaxy? 
+
+\citet{Longmore2013a}: Lower SFR/dense gas
+
