--- a/section_Comparison_to_the_Galactic__.tex
+++ b/section_Comparison_to_the_Galactic__.tex
@@ -1,5 +1,5 @@
 \section{Comparison to the Galactic Disk}
 How does star formation differ in our Galactic center from the rest of the Galaxy? 
 
-\citet{Longmore2013a}: Lower SFR/dense gas
+\citet{Longmore2013b}: Lower SFR/dense gas
 
