--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,4 +1,15 @@
 
+@article{Kruijssen2013a,
+	Author = {{Kruijssen}, J.~M.~D. and {Longmore}, S.~N.},
+	Journal = {\mnras},
+	Month = nov,
+	Pages = {2598-2603},
+	Title = {{Comparing molecular gas across cosmic time-scales: the Milky Way as both a typical spiral galaxy and a high-redshift galaxy analogue}},
+	Volume = 435,
+	Year = 2013}
+
+
+
 @article{Oka2005a,
 	Author = {{Oka}, T. and {Geballe}, T.~R. and {Goto}, M. and {Usuda}, T. and {McCall}, B.~J.},
 	Journal = {\apj},
