--- a/section_Comparison_to_other_Galaxies__.tex
+++ b/section_Comparison_to_other_Galaxies__.tex
@@ -1,6 +1,10 @@
 \section{Comparison to other Galaxies}
 What are the most similar galactic centers to our own?
+What can we learn from comparing these galaxies to ours?
+
+How does our galactic center compare with other galaxies?  Its pressure and sensitivity are similar to high-z star-forming galaxies \citep{Kruijssen2013a}.  
+
 
 \begin{enumerate}
-    \item M83: similar mass galaxy, more active CMZ
+    \item M83: similar mass galaxy, more active CMZ, face on
 \end{enumerate}
