--- a/section_Proposals_Ideas_and_plans__.tex
+++ b/section_Proposals_Ideas_and_plans__.tex
@@ -1,4 +1,10 @@
 \section{Proposals: Ideas and plans}
 (remember that this is public)
 
-Large surveys of the CMZ: More needed?
+Large surveys of the CMZ: More needed?  How should we prioritize?
+
+Followup to APEX 1.4mm survey?  Bigger, deeper, complementary transitions?
+
+Followup to SMACMZ survey?  More area?  Higher frequency?  ALMA, SMA?
+
+Low frequencies: VLA large survey?  Extension of Law et al continuum survey?
