--- a/section_Proposals_Ideas_and_plans__.tex
+++ b/section_Proposals_Ideas_and_plans__.tex
@@ -7,4 +7,4 @@ Followup to APEX 1.4mm survey?  Bigger, deeper, complementary transitions?
 
 Followup to SMACMZ survey?  More area?  Higher frequency?  ALMA, SMA?
 
-Low frequencies: VLA large survey?  Extension of Law et al continuum survey?
+Low frequencies: VLA large survey?  Extension of \citep{Law2008b} continuum survey?
