--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -8,6 +8,33 @@
 	Volume = 435,
 	Year = 2013}
 
+@article{Law2008b,
+	Author = {{Law}, C.~J. and {Yusef-Zadeh}, F. and {Cotton}, W.~D. and {Maddalena}, R.~J.},
+	Journal = {\apjs},
+	Month = jul,
+	Pages = {255-274},
+	Title = {{Green Bank Telescope Multiwavelength Survey of the Galactic Center Region}},
+	Volume = 177,
+	Year = 2008}
+
+@article{Law2008a,
+	Author = {{Law}, C.~J. and {Yusef-Zadeh}, F. and {Cotton}, W.~D.},
+	Journal = {\apjs},
+	Month = aug,
+	Pages = {515-545},
+	Title = {{A Wide-Area VLA Continuum Survey near the Galactic Center at 6 and 20 cm Wavelengths}},
+	Volume = 177,
+	Year = 2008}
+
+@article{Law2009a,
+	Author = {{Law}, C.~J. and {Backer}, D. and {Yusef-Zadeh}, F. and {Maddalena}, R.},
+	Journal = {\apj},
+	Month = apr,
+	Pages = {1070-1081},
+	Title = {{Radio Recombination Lines Toward the Galactic Center Lobe}},
+	Volume = 695,
+	Year = 2009}
+
 
 
 @article{Oka2005a,
