--- a/untitled.tex
+++ b/untitled.tex
@@ -3,3 +3,5 @@
 The workshop is intended to discuss ongoing and future work studying the central molecular zone of our galaxy, with a particular emphasis on the relationship between the molecular gas and star formation.
 
 The conference web page is \url{http://eso.org/~aginsbur/ESO-CMZ-2015.html} and abstracts are listed at \url{http://eso.org/~aginsbur/abstracts.html}.  
+
+This document is intended to include notes from the workshop and a starting point for future work, especially observing proposals and perhaps even papers.
