--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -3,6 +3,6 @@ Sorted from low to high frequency.  Probably should be a table.
 
 \begin{itemize}
     \item GBT and VLA continuum at 20, 6, 3 cm: \citet{Law2008a}, \citet{Law2008b}
-    \item NH3 and 1.3 cm continuum: SWAG (Ott et al), GCMS (Kauffmann et al)
+    \item NH3 and 1.3 cm continuum: SWAG (Ott et al), GCMS (Kauffmann et al), HOPS \citep{Walsh2011a}
     
 \end{itemize}
