--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -16,6 +16,17 @@
 	Title = {{Green Bank Telescope Multiwavelength Survey of the Galactic Center Region}},
 	Volume = 177,
 	Year = 2008}
+	
+	
+@article{Walsh2011a,
+	Author = {{Walsh}, A.~J. and {Breen}, S.~L. and {Britton}, T. and {Brooks}, K.~J. and {Burton}, M.~G. and {Cunningham}, M.~R. and {Green}, J.~A. and {Harvey-Smith}, L. and {Hindson}, L. and {Hoare}, M.~G. and {Indermuehle}, B. and {Jones}, P.~A. and {Lo}, N. and {Longmore}, S.~N. and {Lowe}, V. and {Phillips}, C.~J. and {Purcell}, C.~R. and {Thompson}, M.~A. and {Urquhart}, J.~S. and {Voronkov}, M.~A. and {White}, G.~L. and {Whiting}, M.~T.},
+	Journal = {\mnras},
+	Month = sep,
+	Pages = {1764-1821},
+	Title = {{The H$_{2}$O Southern Galactic Plane Survey (HOPS) - I. Techniques and H$_{2}$O maser data}},
+	Volume = 416,
+	Year = 2011}
+
 
 @article{Law2008a,
 	Author = {{Law}, C.~J. and {Yusef-Zadeh}, F. and {Cotton}, W.~D.},
