--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -18,6 +18,91 @@
 	Year = 2008}
 	
 	
+
+@article{Yusef-Zadeh2013b,
+	Author = {{Yusef-Zadeh}, F. and {Hewitt}, J.~W. and {Wardle}, M. and {Tatischeff}, V. and {Roberts}, D.~A. and {Cotton}, W. and {Uchiyama}, H. and {Nobukawa}, M. and {Tsuru}, T.~G. and {Heinke}, C. and {Royster}, M.},
+	Journal = {\apj},
+	Month = jan,
+	Pages = {33},
+	Title = {{Interacting Cosmic Rays with Molecular Clouds: A Bremsstrahlung Origin of Diffuse High-energy Emission from the Inner 2{\deg}{\times}1{\deg} of the Galactic Center}},
+	Volume = 762,
+	Year = 2013}
+
+@article{Yusef-Zadeh2013c,
+	Author = {{Yusef-Zadeh}, F. and {Wardle}, M. and {Lis}, D. and {Viti}, S. and {Brogan}, C. and {Chambers}, E. and {Pound}, M. and {Rickert}, M.},
+	Journal = {Journal of Physical Chemistry A},
+	Month = oct,
+	Pages = {9404-9419},
+	Title = {{74 MHz Nonthermal Emission from Molecular Clouds: Evidence for a Cosmic Ray Dominated Region at the Galactic Center}},
+	Volume = 117,
+	Year = 2013}
+
+@article{Yusef-Zadeh2015a,
+	Author = {{Yusef-Zadeh}, F. and {Roberts}, D.~A. and {Wardle}, M. and {Cotton}, W. and {Sch{\"o}del}, R. and {Royster}, M.~J.},
+	Month = {Feb},
+	Title = {Radio Continuum Observations of the Galactic Center: Photoevaporative Proplyd-like Objects near Sgr A*},
+	Year = {2015}}
+
+@article{Yusef-Zadeh2014a,
+	Author = {{Yusef-Zadeh}, F. and {Roberts}, D.~A. and {Bushouse}, H. and {Wardle}, M. and {Cotton}, W. and {Royster}, M. and {van Moorsel}, G.},
+	Journal = {ArXiv e-prints},
+	Month = jul,
+	Title = {{The Discovery of Radio Stars within 10 arcseconds of Sgr A* at 7mm}},
+	Year = 2014}
+
+@article{Yusef-Zadeh2007a,
+	Author = {{Yusef-Zadeh}, F. and {Muno}, M. and {Wardle}, M. and {Lis}, D.~C.},
+	Journal = {\apj},
+	Month = feb,
+	Pages = {847-869},
+	Title = {{The Origin of Diffuse X-Ray and {$\gamma$}-Ray Emission from the Galactic Center Region: Cosmic-Ray Particles}},
+	Volume = 656,
+	Year = 2007}
+
+@article{Yusef-Zadeh2009a,
+	Author = {{Yusef-Zadeh}, F. and {Hewitt}, J.~W. and {Arendt}, R.~G. and {Whitney}, B. and {Rieke}, G. and {Wardle}, M. and {Hinz}, J.~L. and {Stolovy}, S. and {Lang}, C.~C. and {Burton}, M.~G. and {Ramirez}, S.},
+	Journal = {\apj},
+	Month = sep,
+	Pages = {178-225},
+	Title = {{Star Formation in the Central 400 pc of the Milky Way: Evidence for a Population of Massive Young Stellar Objects}},
+	Volume = 702,
+	Year = 2009}
+
+@article{Yusef-Zadeh2004a,
+	Author = {{Yusef-Zadeh}, F. and {Hewitt}, J.~W. and {Cotton}, W.},
+	Journal = {\apjs},
+	Month = dec,
+	Pages = {421-550},
+	Title = {{A 20 Centimeter Survey of the Galactic Center Region. I. Detection of Numerous Linear Filaments}},
+	Volume = 155,
+	Year = 2004}
+
+@article{Yusef-Zadeh2012a,
+	Author = {{Yusef-Zadeh}, F.},
+	Journal = {\apjl},
+	Month = nov,
+	Pages = {L11},
+	Title = {{Imprints of Molecular Clouds in Radio Continuum Images}},
+	Volume = 759,
+	Year = 2012}
+
+@article{Yusef-Zadeh2013a,
+	Author = {{Yusef-Zadeh}, F. and {Cotton}, W. and {Viti}, S. and {Wardle}, M. and {Royster}, M.},
+	Journal = {ArXiv e-prints},
+	Month = jan,
+	Title = {{Widespread Methanol Emission from the Galactic Center}},
+	Year = 2013}
+
+@article{Yusef-Zadeh2010a,
+	Author = {{Yusef-Zadeh}, F. and {Lacy}, J.~H. and {Wardle}, M. and {Whitney}, B. and {Bushouse}, H. and {Roberts}, D.~A. and {Arendt}, R.~G.},
+	Journal = {\apj},
+	Month = dec,
+	Pages = {1429-1439},
+	Title = {{Massive Star Formation of the Sgr A East H II Regions Near the Galactic Center}},
+	Volume = 725,
+	Year = 2010}
+	
+	
 @article{Walsh2011a,
 	Author = {{Walsh}, A.~J. and {Breen}, S.~L. and {Britton}, T. and {Brooks}, K.~J. and {Burton}, M.~G. and {Cunningham}, M.~R. and {Green}, J.~A. and {Harvey-Smith}, L. and {Hindson}, L. and {Hoare}, M.~G. and {Indermuehle}, B. and {Jones}, P.~A. and {Lo}, N. and {Longmore}, S.~N. and {Lowe}, V. and {Phillips}, C.~J. and {Purcell}, C.~R. and {Thompson}, M.~A. and {Urquhart}, J.~S. and {Voronkov}, M.~A. and {White}, G.~L. and {Whiting}, M.~T.},
 	Journal = {\mnras},
