--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -4,7 +4,11 @@ Sorted from low to high frequency.  Probably should be a table.
 \begin{itemize}
     \item 74 MHz continuum \citep{Yusef-Zadeh2013c}
     \item GBT and VLA continuum at 20, 6, 3 cm: \citet{Law2008a}, \citet{Law2008b}
+    \item ATCA 6cm H2CO (Ginsburg et al)
     \item NH3 and 1.3 cm continuum: SWAG (Ott et al), GCMS (Kauffmann et al), HOPS \citep{Walsh2011a}
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
+    \item MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
     
 \end{itemize}
+
+Missing: 45-80 GHz, 115-210 GHz
