--- a/section_The_Dense_ISM_Discussions__.tex
+++ b/section_The_Dense_ISM_Discussions__.tex
@@ -8,3 +8,5 @@ What are the magnetic fields and temperatures of these clouds?
 What is the geometry of the molecular gas in the CMZ - is there really a ring?  Are the clouds on elliptical orbits?  Which orbits?
 
 Do cosmic rays, turbulence, x-rays, photons at other wavelengths, or other mechanisms heat the cloud interiors?  Exteriors?
+
+What do we still need to understand from the kinematics?  Are positions every uniquely associated with a given kinematic signature?  How can we describe the turbulence?
