--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -7,7 +7,8 @@ Sorted from low to high frequency.  Probably should be a table.
     \item ATCA 6cm H2CO (Ginsburg et al)
     \item NH3 and 1.3 cm continuum: SWAG (Ott et al), GCMS (Kauffmann et al), HOPS \citep{Walsh2011a}
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
-    \item MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
+    \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
+    \item 217-221 GHz APEX CMZ \url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/27601} and \url{https://github.com/adamginsburg/APEX_CMZ_H2CO}
     
 \end{itemize}
 
