--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -9,6 +9,11 @@ Sorted from low to high frequency.  Probably should be a table.
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
     \item 217-221 GHz APEX CMZ \url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/27601} and \url{https://github.com/adamginsburg/APEX_CMZ_H2CO}
+    \item 1.1 mm BGPS \url{http://milkyway.colorado.edu/bgps/}
+    \item 870 um ATLASGAL \url{http://www3.mpifr-bonn.mpg.de/div/atlasgal/}
+    \item Planck \url{http://irsa.ipac.caltech.edu/data/Planck/release_1/all-sky-maps/}
+    \item Herschel HiGal \url{https://hi-gal.ifsi-roma.inaf.it/higal/}
+    \item IRAS
     
 \end{itemize}
 
