--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -14,6 +14,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item Planck \url{http://irsa.ipac.caltech.edu/data/Planck/release_1/all-sky-maps/}
     \item Herschel HiGal \url{https://hi-gal.ifsi-roma.inaf.it/higal/}
     \item IRAS
+    \item ...
     
 \end{itemize}
 
