--- a/section_Preparing_for_Cycle_4__.tex
+++ b/section_Preparing_for_Cycle_4__.tex
@@ -2,3 +2,12 @@
 
 What line surveys (single dish and other) exist?
 
+
+
+
+ALMA configuration options:
+
+\begin{itemize}
+    \item No special modes (OTF)
+    \item Vanilla setup: band 3, 4, 5, or 6
+\end{itemize}
