--- a/section_Preparing_for_Cycle_4__.tex
+++ b/section_Preparing_for_Cycle_4__.tex
@@ -10,4 +10,5 @@ ALMA configuration options:
 \begin{itemize}
     \item No special modes (OTF)
     \item Vanilla setup: band 3, 4, 5, or 6
+    \item At least 2 GHz continuum?  Or just spectral line?
 \end{itemize}
