--- a/section_The_Dense_ISM_Discussions__.tex
+++ b/section_The_Dense_ISM_Discussions__.tex
@@ -10,3 +10,5 @@ What is the geometry of the molecular gas in the CMZ - is there really a ring?  
 Do cosmic rays, turbulence, x-rays, photons at other wavelengths, or other mechanisms heat the cloud interiors?  Exteriors?
 
 What do we still need to understand from the kinematics?  Are positions every uniquely associated with a given kinematic signature?  How can we describe the turbulence?
+
+What explains the "cloud collision" kinematics often seen toward CMZ clouds \citep{Tanaka2015a,Tanaka2014a,Oka2012a}?
