--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,4 +1,36 @@
 
+@article{Oka2012a,
+	Author = {{Oka}, T. and {Onodera}, Y. and {Nagai}, M. and {Tanaka}, K. and {Matsumura}, S. and {Kamegai}, K.},
+	Journal = {\apjs},
+	Month = aug,
+	Pages = {14},
+	Title = {{ASTE CO J = 3-2 Survey of the Galactic Center}},
+	Volume = 201,
+	Year = 2012}
+
+@article{Tanaka2011a,
+	Author = {{Tanaka}, K. and {Oka}, T. and {Matsumura}, S. and {Nagai}, M. and {Kamegai}, K.},
+	Journal = {\apjl},
+	Month = dec,
+	Pages = {L39},
+	Title = {{High Atomic Carbon Abundance in Molecular Clouds in the Galactic Center Region}},
+	Volume = 743,
+	Year = 2011}
+
+@article{Tanaka2015a,
+	Author = {{Tanaka}, K. and {Nagai}, M. and {Kamegai}, K. and {Oka}, T.},
+	Journal = {ArXiv e-prints},
+	Month = apr,
+	Title = {{CO-0.30-0.07: A Peculiar Molecular Clump with an Extremely Broad Velocity Width}},
+	Year = 2015}
+
+@article{Tanaka2014a,
+	Author = {{Tanaka}, Kunihiko and {Oka}, Tomoharu and {Matsumura}, Shinji and {Nagai}, Makoto and {Kamegai}, Kazuhisa},
+	Month = {Feb},
+	Title = {High Velocity Compact Clouds in the Sagittarius C Region},
+	Year = {2014}}
+
+
 @article{Kruijssen2013a,
 	Author = {{Kruijssen}, J.~M.~D. and {Longmore}, S.~N.},
 	Journal = {\mnras},
