--- a/section_The_Dense_ISM_Discussions__.tex
+++ b/section_The_Dense_ISM_Discussions__.tex
@@ -12,3 +12,5 @@ Do cosmic rays, turbulence, x-rays, photons at other wavelengths, or other mecha
 What do we still need to understand from the kinematics?  Are positions every uniquely associated with a given kinematic signature?  How can we describe the turbulence?
 
 What explains the "cloud collision" kinematics often seen toward CMZ clouds \citep{Tanaka2015a,Tanaka2014a,Oka2012a}?
+
+Comparison of H2CO and NH3 temperatures and morphology -- large and small scales
