--- a/section_SMA_CMZ_8_GHz__.tex
+++ b/section_SMA_CMZ_8_GHz__.tex
@@ -1,2 +1,4 @@
 \section{SMA-CMZ}
 8 GHz now, 16 GHz future, but extra 8 GHz probably only good for continuum
+
+Data to become public when they are reduced.
