--- a/section_SMA_CMZ_8_GHz__.tex
+++ b/section_SMA_CMZ_8_GHz__.tex
@@ -3,3 +3,4 @@
 
 Data to become public when they are reduced.
 
+How can we identify star forming cores?  Original idea: hot core tracers + outflows.  Does that work?
