--- a/section_Preparing_for_Cycle_4__.tex
+++ b/section_Preparing_for_Cycle_4__.tex
@@ -9,6 +9,6 @@ ALMA configuration options:
 
 \begin{itemize}
     \item No special modes (OTF)
-    \item Vanilla setup: band 3, 4, 5, or 6
+    \item Vanilla setup: band 3, 4, 5, or 6 (or 7)
     \item At least 2 GHz continuum?  Or just spectral line?
 \end{itemize}
