--- a/section_SMA_CMZ_8_GHz__.tex
+++ b/section_SMA_CMZ_8_GHz__.tex
@@ -5,4 +5,4 @@ Data to become public when they are reduced.
 
 How can we identify star forming cores?  Original idea: hot core tracers + outflows.  Does that work? CH$_3$OH masers, but incomplete/maybe just shock tracers?
 
-Evolutionary sequence in massive cores seen in dust ridge clouds.
+Evolutionary sequence in massive cores seen in dust ridge clouds.  Steve: free-fall times come from single-dish, large scale.  Diederik: position along ridge dominates spread in density.
