--- a/section_SMA_CMZ_8_GHz__.tex
+++ b/section_SMA_CMZ_8_GHz__.tex
@@ -8,3 +8,5 @@ How can we identify star forming cores?  Original idea: hot core tracers + outfl
 Evolutionary sequence in massive cores seen in dust ridge clouds.  Steve: free-fall times come from single-dish, large scale.  Diederik: position along ridge dominates spread in density.
 
 Lines mapped: H$_2$CO, C$^{18}$O, CH$_3$OH, $^{13}$CO, SiO.
+
+Sgr B2: Free-free is still dominant.
