--- a/section_Proposals_Ideas_and_plans__.tex
+++ b/section_Proposals_Ideas_and_plans__.tex
@@ -2,9 +2,17 @@
 (remember that this is public)
 
 Large surveys of the CMZ: More needed?  How should we prioritize?
+\begin{enumerate}
+\item LASMA band 7 APEX survey?
+\item JCMT-HARPS CO 3-2 survey? 
+\end{enumerate}
 
 Followup to APEX 1.4mm survey?  Bigger, deeper, complementary transitions?
 
 Followup to SMACMZ survey?  More area?  Higher frequency?  ALMA, SMA?
 
 Low frequencies: VLA large survey?  Extension of \citet{Law2008b} continuum survey?
+\begin{enumerate}
+\item (deep) S band, to include CH and recombination lines?  
+\item X band, to include HC3N 1-0?
+\end{enumerate}
