--- a/section_SMA_CMZ_8_GHz__.tex
+++ b/section_SMA_CMZ_8_GHz__.tex
@@ -5,7 +5,7 @@ Data to become public when they are reduced.
 
 How can we identify star forming cores?  Original idea: hot core tracers + outflows.  Does that work? CH$_3$OH masers, but incomplete/maybe just shock tracers?
 
-Evolutionary sequence in massive cores seen in dust ridge clouds.  Steve: free-fall times come from single-dish, large scale.  Diederik: position along ridge dominates spread in density. (Comment by Diederik: I have now checked this quantitatively and it turns out both are actually similarly important -- from Table 2 in KDL15, the time-scale spread is from 0.30 Myr post-pericentre to 0.74 post-pericentre (a factor of 2.5), whereas the density spread is factor of 4 => factor of 2 in free-fall time. So the position is somewhat more important, but not by much.)
+Evolutionary sequence in massive cores seen in dust ridge clouds.  Steve: free-fall times come from single-dish, large scale.  Diederik: position along ridge dominates spread in density. (Comment by Diederik: I have now checked this quantitatively and it turns out both are actually similarly important -- from Table 2 in \citet{Kruijssen2015a}, the time-scale spread is from 0.30 Myr post-pericentre to 0.74 post-pericentre (a factor of 2.5), whereas the density spread is factor of 4 => factor of 2 in free-fall time. So the position is somewhat more important, but not by much.)
 
 Lines mapped: H$_2$CO, C$^{18}$O, CH$_3$OH, $^{13}$CO, SiO.
 
