--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -1,3 +1,6 @@
 \section{Hi-Gal Compact Sources}
 
 Single-band extraction with subsequent band-merging
+
+Inner region: 27\% "protostellar" and 73\% "prestellar" sources in $|\ell|<5$
+Large dispersion in latitude for both populations
