--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -2,5 +2,7 @@
 
 Single-band extraction with subsequent band-merging
 
-Inner region: 27\% "protostellar" and 73\% "prestellar" sources in $|\ell|<5$
-Large dispersion in latitude for both populations
+Inner region: 27\% "protostellar" and 73\% "prestellar" sources in $|\ell|<5$.
+Large dispersion in latitude for both populations.
+
+Most higal "cores" clouds in the CMZ
