--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -5,4 +5,4 @@ Single-band extraction with subsequent band-merging
 Inner region: 27\% "protostellar" and 73\% "prestellar" sources in $|\ell|<5$.
 Large dispersion in latitude for both populations.
 
-Most higal "cores" clouds in the CMZ
+Most higal "cores" are clouds in the CMZ
