--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -6,3 +6,5 @@ Inner region: 27\% "protostellar" and 73\% "prestellar" sources in $|\ell|<5$.
 Large dispersion in latitude for both populations.
 
 Most higal "cores" are clouds in the CMZ
+
+Qizhou: Correlation with 24\um sources?  Yes, included.
