--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -7,4 +7,4 @@ Large dispersion in latitude for both populations.
 
 Most higal "cores" are clouds in the CMZ
 
-Qizhou: Correlation with 24\um sources?  Yes, included.
+Qizhou: Correlation with 24\um sources?  Yes, included.  Do all 24 \um sources have 70 \um counterparts?  Yes.
