--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -8,3 +8,5 @@ Large dispersion in latitude for both populations.
 Most higal "cores" are clouds in the CMZ
 
 Qizhou: Correlation with 24\um sources?  Yes, included.  Do all 24 \um sources have 70 \um counterparts?  Yes.
+
+Dust temperature: CMZ vs Galactic disk -  essentially the same in both.  16 vs 13 K for proto/pre-stellar.
