--- a/section_Hi_Gal_Compact_Sources__.tex
+++ b/section_Hi_Gal_Compact_Sources__.tex
@@ -9,4 +9,4 @@ Most higal "cores" are clouds in the CMZ
 
 Qizhou: Correlation with 24\um sources?  Yes, included.  Do all 24 \um sources have 70 \um counterparts?  Yes.
 
-Dust temperature: CMZ vs Galactic disk -  essentially the same in both.  16 vs 13 K for proto/pre-stellar.
+Dust temperature: CMZ vs Galactic disk -  essentially the same in both.  16 vs 13 K for proto/pre-stellar.  L/M is also nearly the same in and out of the CMZ... slightly less difference in the CMZ than outside.
