--- a/figures/CMZ_surveys1/caption.tex
+++ b/figures/CMZ_surveys1/caption.tex
@@ -1,1 +1,1 @@
-Replace this text with your caption
+Figure showing coverage for a selection of existing and in-progress surveys (Figure needs inclusion of APEX-H2CO, SWAG and SMA surveys to be up to date; such inner 2 degree surveys should probably by done with a zoomed-in secondary figure)
