--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -364,3 +364,36 @@
 	Title = {{The Bolocam Galactic Plane Survey: {$\lambda$} = 1.1 and 0.35 mm Dust Continuum Emission in the Galactic Center Region}},
 	Volume = 721,
 	Year = 2010}
+	
+	
+@article{Dahmen98,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1998A%26A...331..959D},
+	Author = {{Dahmen}, G. and {Huttemeister}, S. and {Wilson}, T.~L. and {Mauersberger}, R.},
+	Date-Added = {2013-05-11 21:39:24 -0700},
+	Date-Modified = {2013-05-11 21:39:27 -0700},
+	Eprint = {arXiv:astro-ph/9711117},
+	Journal = {\aap},
+	Keywords = {GALAXY: CENTER, RADIATIVE TRANSFER, ISM: MOLECULES, ISM: STRUCTURE, GALAXIES: NUCLEI, RADIO LINES: ISM},
+	Month = mar,
+	Pages = {959-976},
+	Title = {{Molecular gas in the Galactic center region. II. Gas mass and N\_, = H\_2/I\_\^{}(12)CO conversion based on a C\^{}(18)O(J = 1 -{\gt} 0) survey}},
+	Volume = 331,
+	Year = 1998}
+
+
+@article{Nakanishi06,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2006PASJ...58..847N},
+	Author = {{Nakanishi}, H. and {Sofue}, Y.},
+	Date-Added = {2013-05-11 21:46:07 -0700},
+	Date-Modified = {2013-05-11 21:46:11 -0700},
+	Eprint = {arXiv:astro-ph/0610769},
+	Journal = {\pasj},
+	Keywords = {Galaxy: disk, Galaxy: kinematics and dynamics, Galaxy: structure, ISM: kinematics and dynamics, radio lines: ISM},
+	Month = oct,
+	Pages = {847-860},
+	Title = {{Three-Dimensional Distribution of the ISM in the Milky Way Galaxy: II. The Molecular Gas Disk}},
+	Volume = 58,
+	Year = 2006}
+
