--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -396,4 +396,20 @@
 	Title = {{Three-Dimensional Distribution of the ISM in the Milky Way Galaxy: II. The Molecular Gas Disk}},
 	Volume = 58,
 	Year = 2006}
+	
+	
+@article{Gordon93,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1993A%26A...280..208G},
+	Author = {{Gordon}, M.~A. and {Berkermann}, U. and {Mezger}, P.~G. and {Zylka}, R. and {Haslam}, C.~G.~T. and {Kreysa}, E. and {Sievers}, A. and {Lemke}, R.},
+	Date-Added = {2013-05-13 00:01:31 -0700},
+	Date-Modified = {2013-05-13 00:01:35 -0700},
+	Journal = {\aap},
+	Keywords = {CONTINUOUS SPECTRA, COSMIC DUST, FAR INFRARED RADIATION, H II REGIONS, INFRARED ASTRONOMY, INTERSTELLAR MATTER, MOLECULAR CLOUDS, MORPHOLOGY, RADIO ASTRONOMY, STAR FORMATION, BOLOMETERS, EXTREMELY HIGH FREQUENCIES, INFRARED ASTRONOMY SATELLITE, MILLIMETER WAVES, RADIO TELESCOPES, SUBMILLIMETER WAVES},
+	Month = dec,
+	Pages = {208-220},
+	Title = {{Anatomy of the Sagittarius complex. 3: Morphology and characteristics of the SGR B2 giant molecular giant molecular cloud}},
+	Volume = 280,
+	Year = 1993}
+
 
