--- a/figures/ALMA_CMZ/caption.tex
+++ b/figures/ALMA_CMZ/caption.tex
@@ -1,1 +1,1 @@
-Replace this text with your caption
+Rough map of existing and proposed-for ALMA observations in the inner R < 200 pc, with arcsecond (subarcsecond to 1.5 arcsecond) resolution.
