--- a/section_Milky_Way_simulation_Emsellem__.tex
+++ b/section_Milky_Way_simulation_Emsellem__.tex
@@ -1,3 +1,5 @@
 \section{Milky Way simulation: Emsellem, Renaud, Teyssier}
 
 \url{http://irfu.cea.fr/Pisp/florent.renaud/mw_large.php}
+
+Milky Way BH mass less than in simulation, BH / CMZ (MW) $\sim0.1$ BH/CMZ(sim)
