--- a/section_Milky_Way_simulation_Emsellem__.tex
+++ b/section_Milky_Way_simulation_Emsellem__.tex
@@ -2,4 +2,4 @@
 
 \url{http://irfu.cea.fr/Pisp/florent.renaud/mw_large.php}
 
-Milky Way BH mass less than in simulation, BH / CMZ (MW) $\sim0.1$ BH/CMZ(sim)
+Relative Milky Way BH and nuclear cluster mass is an order of magnitude less than in simulation, BH / CMZ (MW) $\sim0.1$ BH/CMZ(sim)
