--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,4 +1,32 @@
 
+@article{AZ11,
+	Author = {Adande, G R and Ziurys, L M},
+	Date-Modified = {2015-04-27 13:59:26 +0000},
+	Journal = {The Astrophysical Journal},
+	Month = dec,
+	Number = {2},
+	Pages = {194},
+	Title = {{MILLIMETER-WAVE OBSERVATIONS OF CN AND HNC AND THEIR 15N ISOTOPOLOGUES: A NEW EVALUATION OF THE 14N/ 15N RATIO ACROSS THE GALAXY}},
+	Volume = {744},
+	Year = {2011}}
+
+
+@article{Riq10,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010arXiv1008.1873R},
+	Archiveprefix = {arXiv},
+	Author = {{Riquelme}, D. and {Amo-Baladron}, M.~A. and {Martin-Pintado}, J. and {Mauersberger}, R. and {Martin}, S. and {Bronfman}, L.},
+	Date-Added = {2013-04-15 13:11:02 -0700},
+	Date-Modified = {2013-04-15 13:11:02 -0700},
+	Eprint = {1008.1873},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Galaxy Astrophysics},
+	Month = aug,
+	Primaryclass = {astro-ph.GA},
+	Title = {{Tracing gas accretion in the Galactic center using isotopic ratios}},
+	Year = 2010}
+
+
 @article{Oka2012a,
 	Author = {{Oka}, T. and {Onodera}, Y. and {Nagai}, M. and {Tanaka}, K. and {Matsumura}, S. and {Kamegai}, K.},
 	Journal = {\apjs},
