--- a/section_Comparison_to_the_Galactic__.tex
+++ b/section_Comparison_to_the_Galactic__.tex
@@ -3,4 +3,4 @@ How does star formation differ in our Galactic center from the rest of the Galax
 
 \citet{Longmore2013b}: Lower SFR/dense gas
 
-How do the isotope ratios in the center of the Milky Way compare to the disk? $^{13}$C/$^{12}$C appears lower, at least, \citep[e.g.,][]{Riquelme10}, as do more recent estimates of the $^{15}$N/$^{14}$N ratio \citep{AZ11}.
+How do the isotope ratios in the center of the Milky Way compare to the disk? $^{13}$C/$^{12}$C appears lower, at least, \citep[e.g.,][]{Riq10}, as do more recent estimates of the $^{15}$N/$^{14}$N ratio \citep{AZ11}.
