--- a/section_Comparison_to_other_Galaxies__.tex
+++ b/section_Comparison_to_other_Galaxies__.tex
@@ -8,3 +8,5 @@ How does our galactic center compare with other galaxies?  Its pressure and sens
 \begin{enumerate}
     \item M83: similar mass galaxy, more active CMZ, face on
 \end{enumerate}
+
+How do isotope ratios in the Galactic center compare to those in the (centers of) other galaxies, and what role does opacity play in measurements in both of these regions?
