--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -1,22 +1,28 @@
 \section{Summary of existing and ongoing surveys}
 Sorted from low to high frequency.  Probably should be a table.
 
+Uniform-coverage Surveys:
 \begin{itemize}
     \item 74 MHz continuum \citep{Yusef-Zadeh2013c}
     \item GBT and VLA continuum at 20, 6, 3 cm: \citet{Law2008a}, \citet{Law2008b}
     \item ATCA 6cm H2CO (Ginsburg et al)
-    \item NH3 and 1.3 cm continuum: SWAG (Ott et al), GCMS (Kauffmann et al), HOPS \citep{Walsh2011a}
+    \item NH3, H2O masers and 1.3 cm continuum: SWAG (Ott et al), HOPS \citep{Walsh2011a}
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
     \item 217-221 GHz APEX CMZ \url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/27601} and \url{https://github.com/adamginsburg/APEX_CMZ_H2CO}
-    \item 230 GHz SMA Legacy Survey of the CMZ (Battersby, Keto)
     \item 1.1 mm BGPS \url{http://milkyway.colorado.edu/bgps/}
     \item 870 um ATLASGAL \url{http://www3.mpifr-bonn.mpg.de/div/atlasgal/}
     \item Planck \url{http://irsa.ipac.caltech.edu/data/Planck/release_1/all-sky-maps/}
     \item Herschel HiGal \url{https://hi-gal.ifsi-roma.inaf.it/higal/}
     \item IRAS
     \item ...
-    
+\end{itemize}
+
+Pointed & Targeted Surveys (typically toward high column-density gas):
+\begin{itemize}
+    \item 230 GHz SMA Legacy Survey of the CMZ (Battersby, Keto)
+    \item NH3 (1,1)-(5,5) and H2O masers, GCMS (Kauffmann et al.)
+    \item NH3 (1,1)-(7,7), HC3N, and CH3OH masers (Mills et al.)
 \end{itemize}
 
 Missing: 45-80 GHz, 115-210 GHz
