--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -1,7 +1,7 @@
 \section{Summary of existing and ongoing surveys}
 Sorted from low to high frequency.  Probably should be a table.
 
-Uniform-coverage Surveys:
+{\bf Uniform-coverage Surveys:}
 \begin{itemize}
     \item 74 MHz continuum \citep{Yusef-Zadeh2013c}
     \item GBT and VLA continuum at 20, 6, 3 cm: \citet{Law2008a}, \citet{Law2008b}
@@ -18,7 +18,7 @@ Uniform-coverage Surveys:
     \item ...
 \end{itemize}
 
-Pointed & Targeted Surveys (typically toward high column-density gas):
+{\bf Pointed & Targeted Surveys (typically toward high column-density gas):}
 \begin{itemize}
     \item 230 GHz SMA Legacy Survey of the CMZ (Battersby, Keto)
     \item NH3 (1,1)-(5,5) and H2O masers, GCMS (Kauffmann et al.)
