--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -11,7 +11,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item NH3, H2O masers and 1.3 cm continuum: SWAG (Ott et al), HOPS \citep{Walsh2011a}
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
-    \item THRUMMS, 3 mm b = $\pm$ 1
+    \item THRUMMS, 3 mm b = $\pm$ 1 (but stops at l=358)
     \item SEDIGISM, 1 mm b = $\pm$ 1 
     \item 217-221 GHz APEX CMZ \url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/27601} and \url{https://github.com/adamginsburg/APEX_CMZ_H2CO}
     \item 1.1 mm BGPS \url{http://milkyway.colorado.edu/bgps/}
