--- a/section_Proposals_Ideas_and_plans__.tex
+++ b/section_Proposals_Ideas_and_plans__.tex
@@ -5,6 +5,7 @@ Large surveys of the CMZ: More needed?  How should we prioritize?
 \begin{enumerate}
 \item LASMA band 7 APEX survey?
 \item JCMT-HARPS CO 3-2 survey? 
+\item Multi-J 13CO surveys?
 \end{enumerate}
 
 Followup to APEX 1.4mm survey?  Bigger, deeper, complementary transitions?
