--- a/section_Proposals_Ideas_and_plans__.tex
+++ b/section_Proposals_Ideas_and_plans__.tex
@@ -10,7 +10,7 @@ Large surveys of the CMZ: More needed?  How should we prioritize?
 
 Followup to APEX 1.4mm survey?  Bigger, deeper, complementary transitions?
 
-Followup to SMACMZ survey?  More area?  Higher frequency?  ALMA, SMA?
+Followup to SMACMZ survey?  More area?  Higher frequency? Multiple frequencies?  ALMA, SMA? 
 
 Low frequencies: VLA large survey?  Extension of \citet{Law2008b} continuum survey?
 \begin{enumerate}
