--- a/section_SMA_CMZ_8_GHz__.tex
+++ b/section_SMA_CMZ_8_GHz__.tex
@@ -9,6 +9,6 @@ Evolutionary sequence in massive cores seen in dust ridge clouds.  Steve: free-f
 
 Lines mapped: H$_2$CO, C$^{18}$O, CH$_3$OH, $^{13}$CO, SiO.
 
-Sgr B2: Free-free is still dominant at 1mm
+Sgr B2: Dust is dominant at 1mm, but free-free is partially still present
 
 Lots of interesting & impressive detections.  PDFs - do they mean anything?
