--- a/section_Milky_Way_simulation_Emsellem__.tex
+++ b/section_Milky_Way_simulation_Emsellem__.tex
@@ -1,4 +1,4 @@
-\section{Milky Way simulation: Emsellem, Renaud, Teyssier}
+\section{Milky Way simulation: Emsellem, Renaud, Bournaud, Teyssier}
 
 \url{http://irfu.cea.fr/Pisp/florent.renaud/mw_large.php}
 
