--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -10,6 +10,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item Bulge Ku band Thermal Survey, 1$''$ w/ VLA, multi-configuration (Sjouwerman \& Mills)
     \item NH3, H2O masers and 1.3 cm continuum: SWAG (Ott et al), HOPS \citep{Walsh2011a}
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
+    \item 42-50 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/survey.html#CMZ_7mm_Table}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
     \item THRUMMS, 3 mm b = $\pm$ 1 (but stops at l=358)
     \item SEDIGISM, 1 mm b = $\pm$ 1 
