--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -440,4 +440,20 @@
 	Volume = 280,
 	Year = 1993}
 
-
+@ARTICLE{Jones2013,
+   author = {{Jones}, P.~A. and {Burton}, M.~G. and {Cunningham}, M.~R. and 
+	{Tothill}, N.~F.~H. and {Walsh}, A.~J.},
+    title = "{Spectral imaging of the central molecular zone in multiple 7-mm molecular lines}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1304.7076},
+ primaryClass = "astro-ph.GA",
+ keywords = {ISM: kinematics and dynamics, ISM: molecules, radio lines: ISM},
+     year = 2013,
+    month = jul,
+   volume = 433,
+    pages = {221-234},
+      doi = {10.1093/mnras/stt717},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.433..221J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
