--- a/section_Milky_Way_simulation_Emsellem__.tex
+++ b/section_Milky_Way_simulation_Emsellem__.tex
@@ -2,4 +2,6 @@
 
 \url{http://irfu.cea.fr/Pisp/florent.renaud/mw_large.php}
 
+See ref paper = Renaud et al. 2013, MNRAS 436 1836
+and Emsellem et al. 2015, MNRAS 446, 2446
 Relative Milky Way BH and nuclear cluster mass is an order of magnitude less than in simulation, BH / CMZ (MW) $\sim0.1$ BH/CMZ(sim)
