--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -457,3 +457,41 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.433..221J},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Renaud2013,
+   author = {{Renaud}, F. and {Bournaud}, F. and {Emsellem}, E. and {Elmegreen}, B. and 
+	{Teyssier}, R. and {Alves}, J. and {Chapon}, D. and {Combes}, F. and 
+	{Dekel}, A. and {Gabor}, J. and {Hennebelle}, P. and {Kraljic}, K.
+	},
+    title = "{A sub-parsec resolution simulation of the Milky Way: global structure of the interstellar medium and properties of molecular clouds}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1307.5639},
+ primaryClass = "astro-ph.GA",
+ keywords = {methods: numerical, stars: formation, ISM: structure, Galaxy: structure},
+     year = 2013,
+    month = dec,
+   volume = 436,
+    pages = {1836-1851},
+      doi = {10.1093/mnras/stt1698},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.436.1836R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Emsellem2015,
+   author = {{Emsellem}, E. and {Renaud}, F. and {Bournaud}, F. and {Elmegreen}, B. and 
+	{Combes}, F. and {Gabor}, J.~M.},
+    title = "{The interplay between a galactic bar and a supermassive black hole: nuclear fuelling in a subparsec resolution galaxy simulation}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1410.6479},
+ keywords = {hydrodynamics, methods: numerical, Galaxy: kinematics and dynamics, Galaxy: nucleus, galaxies: evolution, galaxies: kinematics and dynamics},
+     year = 2015,
+    month = jan,
+   volume = 446,
+    pages = {2468-2482},
+      doi = {10.1093/mnras/stu2209},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.446.2468E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
