added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -578,3 +578,18 @@
   title = {{A sub-parsec resolution simulation of the Milky Way: global structure of the interstellar medium and properties of molecular clouds}},
   journal = {Monthly Notices of the Royal Astronomical Society},
 }
+
+
+@article{Emsellem_2014,
+  doi = {10.1093/mnras/stu2209},
+  url = {http://dx.doi.org/10.1093/mnras/stu2209},
+  year = {2014},
+  month = {nov},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {446},
+  number = {3},
+  pages = {2468--2482},
+  author = {E. Emsellem and F. Renaud and F. Bournaud and B. Elmegreen and F. Combes and J. M. Gabor},
+  title = {{The interplay between a galactic bar and a supermassive black hole: nuclear fuelling in a subparsec resolution galaxy simulation}},
+  journal = {Monthly Notices of the Royal Astronomical Society},
+}
