--- a/section_Milky_Way_simulation_Emsellem__.tex
+++ b/section_Milky_Way_simulation_Emsellem__.tex
@@ -5,3 +5,5 @@
 See ref paper = \cite{Renaud_2013} and \cite{Emsellem_2014}
 
 Relative Milky Way BH and nuclear cluster mass may be an order of magnitude less than in simulation, BH / CMZ (MW) $\sim0.1$ BH/CMZ(sim) but to be checked.
+
+Clearly the mass ratio, extent, etc will decide on the fate, and cycle (if cycle there is).
