--- a/section_Molecular_gas_around_a__.tex
+++ b/section_Molecular_gas_around_a__.tex
@@ -1,3 +1,3 @@
 \section{Molecular gas around a black hole}
-How is molecular gas affected by the presence of Sgr A*?  Do we see its effects anywhere beyond the circumnuclear disk?  (yes)
+How is molecular gas affected by the presence of Sgr A*?  Do we see its effects anywhere beyond the circumnuclear disk?  (yes) SiO has been suggested to be correlated with the Fe 6.4 KeV line in the central 200 pc \citep{JMP00}, with the G0.11-0.11 cloud \citep{Handa} being a notable example of very high SiO abundances correlating with the time-variable X-ray emission \citep{Ponti10}.
 
