--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -593,3 +593,46 @@
   title = {{The interplay between a galactic bar and a supermassive black hole: nuclear fuelling in a subparsec resolution galaxy simulation}},
   journal = {Monthly Notices of the Royal Astronomical Society},
 }
+
+@article{Ponti10,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...714..732P},
+	Archiveprefix = {arXiv},
+	Author = {{Ponti}, G. and {Terrier}, R. and {Goldwurm}, A. and {Belanger}, G. and {Trap}, G.},
+	Date-Added = {2013-04-15 13:14:29 -0700},
+	Date-Modified = {2013-04-15 13:14:29 -0700},
+	Doi = {10.1088/0004-637X/714/1/732},
+	Eprint = {1003.2001},
+	Journal = {\apj},
+	Keywords = {Galaxy: center, ISM: clouds, X-rays: ISM},
+	Month = may,
+	Pages = {732-747},
+	Primaryclass = {astro-ph.HE},
+	Title = {{Discovery of a Superluminal Fe K Echo at the Galactic Center: The Glorious Past of Sgr A* Preserved by Molecular Clouds}},
+	Volume = 714,
+	Year = 2010,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/714/1/732}}
+
+
+@article{Handa,
+	Author = {Handa, Toshihiro and Sakano, M and Naito, Seiichiro and Hiramatsu, M and Tsuboi, M},
+	Date-Added = {2013-04-15 13:10:35 -0700},
+	Date-Modified = {2013-04-15 13:10:35 -0700},
+	Journal = {The Astrophysical Journal},
+	Pages = {261},
+	Title = {{Thermal SiO and H13CO+ Line Observations of the Dense Molecular Cloud G0.11-0.11 in the Galactic Center Region}},
+	Volume = {636},
+	Year = {2006}}
+
+
+@article{JMP00,
+	Author = {Martin-Pintado, J and de Vicente, P and Rodr{\'\i}guez-Fern{\'a}ndez, Nemesio J and Fuente, A and Planesas, P},
+	Date-Modified = {2015-04-27 15:27:16 +0000},
+	Journal = {Astronomy and Astrophysics},
+	Month = apr,
+	Pages = {L5},
+	Title = {{A correlation between the SiO and the Fe 6.4 keV line emission from the Galactic center}},
+	Volume = {356},
+	Year = {2000}}
+
+
