--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -8,7 +8,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item L-band OH with VLA D-configuration (Walsh et al.)
     \item ATCA 6cm H2CO (Ginsburg et al)
     \item Bulge Ku band Thermal Survey, 1$''$ w/ VLA, multi-configuration (Sjouwerman \& Mills)
-    \item NH3, H2O masers and 1.3 cm continuum: SWAG (Ott et al), HOPS \citep{Walsh2011a}
+    \item NH3, H2O masers and 1.3 cm continuum: SWAG (Ott et al) \url{https://sites.google.com/site/atcaswag/home}, HOPS \citep{Walsh2011a}
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
     \item 42-50 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/survey.html#CMZ_7mm_Table} \citep{Jones2013}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
