--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -32,3 +32,9 @@ Sorted from low to high frequency.  Probably should be a table.
 \end{itemize}
 
 Missing: 50-80 GHz, 115-210 GHz
+Options for filling in these frequency ranges:
+\begin{itemize}
+\item GBT 4mm receiver : 67-93 GHz
+\item ALMA Band 4: 125-163 GHz
+\item APEX Band 5 (SEPIA): 158-211 GHz
+\end{itemize}
