--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -31,7 +31,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item ...
 \end{itemize}
 
-Missing: 50-80 GHz, 115-210 GHz
+{\bf Missing: 50-80 GHz, 115-210 GHz}
 
 Options for filling in these frequency ranges:
 \begin{itemize}
