--- a/figures/VLA_CMZ/caption.tex
+++ b/figures/VLA_CMZ/caption.tex
@@ -1,1 +1,1 @@
-Replace this text with your caption
+Non-exhaustive map of existing and proposed-for high-frequency VLA observations at ~2-3$''$ resolution
