--- a/section_Preparing_for_Cycle_4__.tex
+++ b/section_Preparing_for_Cycle_4__.tex
@@ -2,7 +2,7 @@
 
 What line surveys (single dish and other) exist?
 
-Cover a large region at a single band (3?) or a more targeted cloud sample with multiple bands for, e.g., excitation?
+Cover a large area with a single band (3?) or a targeted cloud sample at multiple bands for, e.g., excitation?
 
 
 ALMA configuration options:
